Fix OpenAPI spec, make the querying endpoint in OpenAPI
